@@ -3,18 +3,24 @@ import inspect
 from pyramid.interfaces import IRequest
 
 from memphis import config
+from memphis.view.customize import layersManager
 from memphis.view.view import registerViewImpl
 from memphis.view.layout import registerLayoutImpl
 from memphis.view.pagelet import registerPageletImpl, registerPageletTypeImpl
 
 
-def pagelet(pageletType, context=None, template=None, layer=None):
+def pagelet(pageletType, context=None, template=None, layer=''):
     info = config.DirectiveInfo(allowed_scope=('class',))
+
+    # register view in layer
+    discriminator = ('memphis.view:pagelet', pageletType, context)
+    layersManager.register(layer, discriminator)
 
     info.attach(
         config.ClassAction(
-            registerPageletImpl, (pageletType, context, template, layer),
-            discriminator=('memphis.view:pagelet', pageletType,context,layer))
+            registerPageletImpl, 
+            (pageletType, context, template, layer, discriminator),
+            discriminator = discriminator + (layer,))
         )
 
 
@@ -28,27 +34,25 @@ def pageletType(name, context=None):
         )
 
 
-def pyramidView(*args, **kw):
+def pyramidView(name='', context=None, template=None, route=None, 
+                layout='', permission='__no_permission_required__',
+                default=False, decorator=None, layer=''):
+
     info = config.DirectiveInfo(
         allowed_scope=('class', 'module', 'function call'))
 
-    def initargs(name='', context=None, template=None, route=None, 
-                 layout='', permission='__no_permission_required__',
-                 default=False, decorator=None):
-        return name, context, route, template, \
-            layout, permission, default, decorator
-
-    name, context, route, template, \
-        layout, permission, default, decorator = initargs(*args, **kw)
+    # register view in layer
+    discriminator = ('memphis.view:view', name, context, route)
+    layersManager.register(layer, discriminator)
 
     if info.scope in ('module', 'function call'): # function decorator
         def wrapper(factory):
             info.attach(
                 config.Action(
                     registerViewImpl,
-                    (factory, name, context, template,
-                     route, layout, permission, default, decorator),
-                    discriminator = ('memphis.view:view',name,context,route))
+                    (factory, name, context, template, route, layout, 
+                     permission, default, decorator, layer, discriminator),
+                    discriminator = discriminator+(layer,))
                 )
             return factory
         return wrapper
@@ -56,25 +60,29 @@ def pyramidView(*args, **kw):
         info.attach(
             config.ClassAction(
                 registerViewImpl,
-                (name, context, template,
-                 route, layout, permission, default, decorator),
-                discriminator = ('memphis.view:view', name, context, route))
+                (name, context, template, route, layout, 
+                 permission, default, decorator, layer, discriminator),
+                discriminator = discriminator+(layer,))
             )
 
 
-def layout(name='',context=None,view=None,parent='',route=None,template=None):
+def layout(name='', context=None, view=None, parent='',
+           route=None, template=None, layer=''):
     info = config.DirectiveInfo(allowed_scope=('class',))
+
+    # register view in layer
+    discriminator = ('memphis.view:layout', name, context, view, route)
+    layersManager.register(layer, discriminator)
+
     info.attach(
         config.ClassAction(
             registerLayoutImpl,
-            (name, context, view, template, parent, route),
-            discriminator = (
-                'memphis.view:layout', name, context, view, route))
+            (name, context, view, template, parent, route, layer, discriminator),
+            discriminator = discriminator + (layer,))
         )
 
 
 class ViewDiscriminator(object):
-
     type = 'memphis.view:view'
 
     title = 'View'
